Added Picocli functionality